Fix toggles on mobile.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1021,6 +1021,7 @@ body.overlay-open {
     height: 24px;
     position: relative;
     width: 50px;
+    flex-shrink: 0;
 }
 
 .demo-switch {
@@ -1028,6 +1029,7 @@ body.overlay-open {
     height: 24px;
     position: relative;
     width: 50px;
+    flex-shrink: 0;
 }
 
 .theme-switch input, .demo-switch input {
